--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -38,8 +38,9 @@
             <div class="panel-heading">
               <h2 class="panel-title">Location map</h2>
             </div>
-            <div class="panel-body">
-              <img src="http://maps.googleapis.com/maps/api/staticmap?center={{ vm.data.location.coords[1] }},{{ vm.data.location.coords[0] }}&amp;zoom=17&amp;size=400x350&amp;sensor=false&amp;makers={{ vm.data.location.coords[1] }},{{ vm.data.location.coords[0] }}&amp;scale=2" class="img-responsive img-rounded" />
+            <div  id="mapcontainer" class="panel-body">
+              <!--<img src="http://maps.googleapis.com/maps/api/staticmap?center={{ vm.data.location.coords[0] }},{{ vm.data.location.coords[1] }}&amp;zoom=17&amp;size=400x350&amp;sensor=false&amp;makers={{ vm.data.location.coords[0] }},{{ vm.data.location.coords[1] }}&amp;scale=2" class="img-responsive img-rounded" />谷歌地图没法显示，改用百度地图-->
+              <img src="http://api.map.baidu.com/staticimage/v2?ak=LRhfOlLe2FpHn5cRCHQcUlsafwdqsL3w&amp;center={{ vm.data.location.coords[0] }},{{ vm.data.location.coords[1] }}&amp;zoom=17&amp;size=400x350&amp;sensor=false&amp;markers={{ vm.data.location.coords[0] }},{{ vm.data.location.coords[1] }}&amp;markerStyles=-1,http://www.columbiasports.cn/themes/ecstore/images/dealer-map-marker.png,-1,52,51&map;scale=2" class="img-responsive img-rounded" />
             </div>
           </div>
         </div>
