--- a/app_client/index.html
+++ b/app_client/index.html
@@ -12,6 +12,7 @@
     <script src="/lib/angular-sanitize.min.js"></script>
     <script src="/lib/ui-bootstrap-custom-0.12.0.min.js"></script>
     <script src="lib/ui-bootstrap-custom-tpls-0.12.0.min.js"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=LRhfOlLe2FpHn5cRCHQcUlsafwdqsL3w"></script>
     <script src="/angular/wifidot.min.js"></script>
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
